// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runClientPrintConfig > --json output for claude/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "type": "http",
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for claude/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "type": "stdio",
      "command": "npx",
      "args": [
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ],
      "env": {}
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/http parses cleanly and matches snapshot 1`] = `
"{
  "mcp_servers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcp_servers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/http parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbox": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbox": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > default friendly output for claude/http contains an explanation and a fenced code block 1`] = `
"Open Claude Code's user-scope MCP config — \`~/.claude.json\` on POSIX, \`%USERPROFILE%\\.claude.json\` on Windows.

Run \`tlbx serve --http\` first, then merge the JSON block below into the file's top-level \`mcpServers\` object so Claude Code points at the running ToolBox.

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "type": "http",
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for claude/stdio contains an explanation and a fenced code block 1`] = `
"Open Claude Code's user-scope MCP config — \`~/.claude.json\` on POSIX, \`%USERPROFILE%\\.claude.json\` on Windows.

Merge the JSON block below into the file's top-level \`mcpServers\` object so Claude Code launches ToolBox over stdio on demand.

Tip: \`tlbx client install claude\` writes the same entry for you (with a timestamped backup).

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "type": "stdio",
      "command": "npx",
      "args": [
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ],
      "env": {}
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/http contains an explanation and a fenced code block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your Codex CLI MCP config (~/.codex/config.toml) to point it at the running ToolBox:

\`\`\`toml
[mcp_servers.toolbox]
url = "http://127.0.0.1:7331/mcp"
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/stdio contains an explanation and a fenced code block 1`] = `
"Add this to your Codex CLI MCP config (~/.codex/config.toml) so Codex launches ToolBox over stdio on demand:

\`\`\`toml
[mcp_servers.toolbox]
command = "npx"
args = ["-y", "@toolbox/cli", "serve", "--stdio"]
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/http contains an explanation and a fenced code block 1`] = `
"Generic MCP client (Streamable HTTP). Run \`tlbx serve --http\` first, then point your client at this URL:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/stdio contains an explanation and a fenced code block 1`] = `
"Generic MCP client (stdio). Most clients accept this shape; consult your client docs for the exact config key:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/http contains an explanation and a fenced code block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your OpenCode MCP config to point it at the running ToolBox:

\`\`\`json
{
  "mcp": {
    "toolbox": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/stdio contains an explanation and a fenced code block 1`] = `
"Add this to your OpenCode MCP config so OpenCode launches ToolBox over stdio:

\`\`\`json
{
  "mcp": {
    "toolbox": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "@toolbox/cli",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
\`\`\`
"
`;
